Fix link balloon layout issue

--- a/packages/ckeditor5-coremedia-link/theme/contentlinkformview.css
+++ b/packages/ckeditor5-coremedia-link/theme/contentlinkformview.css
@@ -30,7 +30,7 @@
 
 /* content view label -  */
 .cm-ck-link-form-view .cm-ck-content-link-view > .ck.ck-button__label {
-  width: auto;
+  width: 106px;
 }
 
 .cm-ck-form-view--loading .cm-ck-content-link-view,
